--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 reqwest = { version = "0.12.9", features = ["json", "blocking", "multipart"] }
 tokio = { version = "1.42.0", features = ["macros"] }
+url = "2.5.4"
 
