--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "questdb"
+name = "questdb-client"
 description = "Connector for questdb"
 repository = "https://github.com/solanav/questdb-rs"
 version = "0.1.2"
@@ -17,4 +17,3 @@ serde_json = "1.0"
 reqwest = { version = "0.12.9", features = ["json", "blocking", "multipart"] }
 tokio = { version = "1.42.0", features = ["macros"] }
 url = "2.5.4"
-
